--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "source": [
-    "## Overview"
+    "# Overview"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -45,7 +45,7 @@
   },
   {
    "source": [
-    "## Business Problem"
+    "# Business Problem"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -59,7 +59,7 @@
   },
   {
    "source": [
-    "## Data & Methods"
+    "# Data & Methods"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -73,7 +73,11 @@
   },
   {
    "source": [
-    "## Data Understanding"
+    "# Data Understanding\n",
+    "\n",
+    "1. What is the overall polarity of the tweets?\n",
+    "2. What are the most popular hashtags of each tweet type?\n",
+    "3. Which phrases have the most importance in modeling?"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -83,18 +87,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# figure 1 - Polarity bar graph and compound density plot\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# figure 2 - Censored top hashtags word cloud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# analysis"
+   ]
   },
   {
    "source": [
-    "### Class Imbalance"
+    "# figure 3 Bigrams chart?\n"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# analysis"
+   ]
+  },
+  {
+   "source": [
+    "# Corpus Statistics"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Class Imbalance"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -111,11 +162,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# total vocab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# top words in each label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "source": [
-    "## Feature Engineering\n",
+    "# Feature Engineering\n",
     "Data cleaning function, tokenization, lemming"
    ],
    "cell_type": "markdown",
@@ -151,14 +229,14 @@
   },
   {
    "source": [
-    "## Modeling"
+    "# Modeling"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "### Baselines"
+    "## Baselines"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -250,7 +328,7 @@
   },
   {
    "source": [
-    "## All Evaluation Metrics"
+    "# Evaluating All Models"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -307,7 +385,7 @@
   },
   {
    "source": [
-    "## Conclusions"
+    "# Recommendations"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -320,11 +398,32 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "source": [
-    "## Next Steps"
+    "# Conclusion"
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "# Next Steps"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
