--- a/models/SVM.ipynb
+++ b/models/SVM.ipynb
@@ -533,15 +533,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Fitting 5 folds for each of 75 candidates, totalling 375 fits\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+      "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.371, total=  31.4s\n",
+      "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   31.4s remaining:    0.0s\n",
+      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.397, total=  32.1s\n",
+      "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
+      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  1.1min remaining:    0.0s\n",
+      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.393, total=  32.1s\n",
+      "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
+      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.425, total=  31.4s\n",
+      "[CV] C=0.1, gamma=1, kernel=rbf ......................................\n",
+      "[CV] .......... C=0.1, gamma=1, kernel=rbf, score=0.388, total=  32.6s\n",
+      "[CV] C=0.1, gamma=1, kernel=sigmoid ..................................\n",
+      "[CV] ...... C=0.1, gamma=1, kernel=sigmoid, score=0.430, total=  28.8s\n",
+      "[CV] C=0.1, gamma=1, kernel=sigmoid ..................................\n",
+      "[CV] ...... C=0.1, gamma=1, kernel=sigmoid, score=0.439, total=  29.4s\n",
+      "[CV] C=0.1, gamma=1, kernel=sigmoid ..................................\n",
+      "[CV] ...... C=0.1, gamma=1, kernel=sigmoid, score=0.425, total=  28.7s\n",
+      "[CV] C=0.1, gamma=1, kernel=sigmoid ..................................\n",
+      "[CV] ...... C=0.1, gamma=1, kernel=sigmoid, score=0.440, total=  28.1s\n",
+      "[CV] C=0.1, gamma=1, kernel=sigmoid ..................................\n",
+      "[CV] ...... C=0.1, gamma=1, kernel=sigmoid, score=0.405, total=  28.7s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ........ C=0.1, gamma=0.1, kernel=rbf, score=0.333, total=  39.0s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ........ C=0.1, gamma=0.1, kernel=rbf, score=0.358, total=  34.4s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ........ C=0.1, gamma=0.1, kernel=rbf, score=0.314, total=  34.8s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ........ C=0.1, gamma=0.1, kernel=rbf, score=0.291, total=  33.5s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=rbf ....................................\n",
+      "[CV] ........ C=0.1, gamma=0.1, kernel=rbf, score=0.345, total=  35.3s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=sigmoid ................................\n",
+      "[CV] .... C=0.1, gamma=0.1, kernel=sigmoid, score=0.165, total=  35.7s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=sigmoid ................................\n",
+      "[CV] .... C=0.1, gamma=0.1, kernel=sigmoid, score=0.164, total=  34.6s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=sigmoid ................................\n",
+      "[CV] .... C=0.1, gamma=0.1, kernel=sigmoid, score=0.157, total=  36.7s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=sigmoid ................................\n",
+      "[CV] .... C=0.1, gamma=0.1, kernel=sigmoid, score=0.109, total=  39.1s\n",
+      "[CV] C=0.1, gamma=0.1, kernel=sigmoid ................................\n",
+      "[CV] .... C=0.1, gamma=0.1, kernel=sigmoid, score=0.185, total=  36.0s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] ....... C=0.1, gamma=0.01, kernel=rbf, score=0.000, total=  43.1s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] ....... C=0.1, gamma=0.01, kernel=rbf, score=0.000, total=  35.6s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] ....... C=0.1, gamma=0.01, kernel=rbf, score=0.026, total=  34.9s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] ....... C=0.1, gamma=0.01, kernel=rbf, score=0.000, total=  36.3s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=rbf ...................................\n",
+      "[CV] ....... C=0.1, gamma=0.01, kernel=rbf, score=0.000, total=  36.8s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=sigmoid ...............................\n",
+      "[CV] ... C=0.1, gamma=0.01, kernel=sigmoid, score=0.000, total=  37.5s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=sigmoid ...............................\n",
+      "[CV] ... C=0.1, gamma=0.01, kernel=sigmoid, score=0.000, total=  37.0s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=sigmoid ...............................\n",
+      "[CV] ... C=0.1, gamma=0.01, kernel=sigmoid, score=0.000, total=  36.5s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=sigmoid ...............................\n",
+      "[CV] ... C=0.1, gamma=0.01, kernel=sigmoid, score=0.000, total=  35.2s\n",
+      "[CV] C=0.1, gamma=0.01, kernel=sigmoid ...............................\n",
+      "[CV] ... C=0.1, gamma=0.01, kernel=sigmoid, score=0.000, total=  35.7s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.000, total=  36.3s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.000, total=  34.6s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.000, total=  35.2s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.000, total=  35.5s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=rbf ..................................\n",
+      "[CV] ...... C=0.1, gamma=0.001, kernel=rbf, score=0.000, total=  36.5s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=sigmoid ..............................\n",
+      "[CV] .. C=0.1, gamma=0.001, kernel=sigmoid, score=0.000, total=  35.9s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=sigmoid ..............................\n",
+      "[CV] .. C=0.1, gamma=0.001, kernel=sigmoid, score=0.000, total=  35.8s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=sigmoid ..............................\n",
+      "[CV] .. C=0.1, gamma=0.001, kernel=sigmoid, score=0.000, total=  36.1s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=sigmoid ..............................\n",
+      "[CV] .. C=0.1, gamma=0.001, kernel=sigmoid, score=0.000, total=  36.3s\n",
+      "[CV] C=0.1, gamma=0.001, kernel=sigmoid ..............................\n",
+      "[CV] .. C=0.1, gamma=0.001, kernel=sigmoid, score=0.000, total=  35.8s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] ..... C=0.1, gamma=0.0001, kernel=rbf, score=0.000, total=  35.3s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] ..... C=0.1, gamma=0.0001, kernel=rbf, score=0.000, total=  34.5s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] ..... C=0.1, gamma=0.0001, kernel=rbf, score=0.000, total=  35.4s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] ..... C=0.1, gamma=0.0001, kernel=rbf, score=0.000, total=  34.5s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=rbf .................................\n",
+      "[CV] ..... C=0.1, gamma=0.0001, kernel=rbf, score=0.000, total=  35.7s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=sigmoid .............................\n",
+      "[CV] . C=0.1, gamma=0.0001, kernel=sigmoid, score=0.000, total=  36.2s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=sigmoid .............................\n",
+      "[CV] . C=0.1, gamma=0.0001, kernel=sigmoid, score=0.000, total=  35.9s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=sigmoid .............................\n",
+      "[CV] . C=0.1, gamma=0.0001, kernel=sigmoid, score=0.000, total=  39.4s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=sigmoid .............................\n",
+      "[CV] . C=0.1, gamma=0.0001, kernel=sigmoid, score=0.000, total=  36.0s\n",
+      "[CV] C=0.1, gamma=0.0001, kernel=sigmoid .............................\n",
+      "[CV] . C=0.1, gamma=0.0001, kernel=sigmoid, score=0.000, total=  37.3s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.221, total=  54.8s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.265, total=  52.7s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.215, total=  53.9s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.218, total=  53.5s\n",
+      "[CV] C=1, gamma=1, kernel=rbf ........................................\n",
+      "[CV] ............ C=1, gamma=1, kernel=rbf, score=0.242, total=  51.3s\n",
+      "[CV] C=1, gamma=1, kernel=sigmoid ....................................\n",
+      "[CV] ........ C=1, gamma=1, kernel=sigmoid, score=0.396, total=  30.4s\n",
+      "[CV] C=1, gamma=1, kernel=sigmoid ....................................\n",
+      "[CV] ........ C=1, gamma=1, kernel=sigmoid, score=0.425, total=  25.5s\n",
+      "[CV] C=1, gamma=1, kernel=sigmoid ....................................\n",
+      "[CV] ........ C=1, gamma=1, kernel=sigmoid, score=0.405, total=  26.7s\n",
+      "[CV] C=1, gamma=1, kernel=sigmoid ....................................\n",
+      "[CV] ........ C=1, gamma=1, kernel=sigmoid, score=0.428, total=  20.7s\n",
+      "[CV] C=1, gamma=1, kernel=sigmoid ....................................\n",
+      "[CV] ........ C=1, gamma=1, kernel=sigmoid, score=0.386, total=  25.3s\n",
+      "[CV] C=1, gamma=0.1, kernel=rbf ......................................\n",
+      "[CV] .......... C=1, gamma=0.1, kernel=rbf, score=0.433, total=  24.6s\n",
+      "[CV] C=1, gamma=0.1, kernel=rbf ......................................\n",
+      "[CV] .......... C=1, gamma=0.1, kernel=rbf, score=0.465, total=  25.3s\n",
+      "[CV] C=1, gamma=0.1, kernel=rbf ......................................\n",
+      "[CV] .......... C=1, gamma=0.1, kernel=rbf, score=0.446, total=  25.2s\n",
+      "[CV] C=1, gamma=0.1, kernel=rbf ......................................\n"
      ]
     },
     {
@@ -551,7 +680,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-66f1e9b1a96d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'# fit the grid search to our data\\ngrid_baseline.fit(tfidf_data_train, y_train)\\n\\n# this cell takes ? minutes to run'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-56-66f1e9b1a96d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_cell_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'time'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'# fit the grid search to our data\\ngrid_baseline.fit(tfidf_data_train, y_train)\\n\\n# this cell takes ? minutes to run'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m/Users/SidneyKung/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/IPython/core/interactiveshell.py\u001b[0m in \u001b[0;36mrun_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2115\u001b[0m             \u001b[0mmagic_arg_s\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvar_expand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mline\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstack_depth\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2116\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuiltin_trap\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2117\u001b[0;31m                 \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmagic_arg_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2118\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m<decorator-gen-60>\u001b[0m in \u001b[0;36mtime\u001b[0;34m(self, line, cell, local_ns)\u001b[0m\n",
       "\u001b[0;32m/Users/SidneyKung/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/IPython/core/magic.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(f, *a, **k)\u001b[0m\n\u001b[1;32m    186\u001b[0m     \u001b[0;31m# but it's overkill for just that one bit of state.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mmagic_deco\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 188\u001b[0;31m         \u001b[0mcall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    189\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    190\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
