--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -24,7 +24,9 @@
  "cells": [
   {
    "source": [
-    "# Logisitic Regression Modeling"
+    "# Logisitic Regression Modeling\n",
+    "\n",
+    "In this notebook, we iterate through a logisitic regression baseline, trying different class imbalance remedy methods. We also grid search to try and optomize the baseline's hyperparameters."
    ],
    "cell_type": "markdown",
    "metadata": {}
