--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -24,7 +24,9 @@
  "cells": [
   {
    "source": [
-    "# Twitter Hate Speech Detection"
+    "# Twitter Hate Speech Detection\n",
+    "\n",
+    "**Please note:** Because of the subject matter of this project, this notebook contains uncensored offensive language from the dataset.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -45,13 +47,8 @@
   },
   {
    "source": [
-    "# Business Problem"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
+    "# Business Problem\n",
+    "\n",
     "Human content moderation exploits people by consistently traumatizing and underpaying them. In 2019, an [article](https://www.theverge.com/2019/6/19/18681845/facebook-moderator-interviews-video-trauma-ptsd-cognizant-tampa) on The Verge exposed the extensive list of horrific working conditions that employees faced at Cognizant, which was Facebook’s primary moderation contractor. Unfortunately, every major tech company, including Twitter, uses human moderators to some extent, both domestically and overseas.\n",
     "\n",
     "Hate speech is defined as abusive or threatening speech that expresses prejudice against a particular group, especially on the basis of race, religion or sexual orientation. Usually, the difference between hate speech and offensive language comes down to subtle context or diction. \n",
@@ -63,13 +60,8 @@
   },
   {
    "source": [
-    "# Data & Methods"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
+    "# Data & Methods\n",
+    "\n",
     "The dataset for this capstone project was sourced from a study called Automated Hate Speech Detection and the Problem of Offensive Language  conducted by Thomas Davidson and a team at Cornell University in 2017. The GitHub repository can be found [here](https://github.com/t-davidson/hate-speech-and-offensive-language). The dataset is provided as a `.csv` file with 24,802 text posts from Twitter where 6% of the tweets were labeled as hate speech. \n",
     "\n",
     "Since content moderation is so subjective, the labels on this dataset were crowdsourced and determined by majority-rules. The “class” column labels each tweet as 0 for hate speech, 1 for offensive language or 2 for neither. In order to create a different project and adapt the data to my specific business context, I will be treating the data as a binary classification problem. \n",
@@ -91,13 +83,11 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# figure 1 - Polarity bar graph and compound density plot\n"
-   ]
+    "![img1](./visualizations/avg_polarity_by_tweet_type.png)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -109,22 +99,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# figure 2 - Censored top hashtags word cloud"
-   ]
+    "![img1](./visualizations/compound_scores.png)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# analysis"
    ]
+  },
+  {
+   "source": [
+    "![img2](./visualizations/censored_hashtags.png)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Most of these hashtags don't provide much meaning, but some of them do. For instance, #teabagger and #tcot are hashtags used among Alt-Right communities. #teabagger refers to those who idenitify with the Tea Party, which is primariily (but not exclusively) associated with the Repubclican Party. And #tcot stands for \"Top Conservatives On Twitter.\"\n",
+    "\n",
+    "It could be expected that those hashtags contain hate speech or offensive language. Others are simply pop culture references, such as #Scandal the TV show or #vote5sos refering to the boy band.\n",
+    "\n",
+    "Overall, we can reccomend that Twitter closely monitors these hashtags for potential posts containing hate speech or even regular offensive language."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
