--- a/models/logisitic_regression.ipynb
+++ b/models/logisitic_regression.ipynb
@@ -752,7 +752,7 @@
   },
   {
    "source": [
-    "Looks like using grid search can't really improve this F1 score. We can try out different models from here."
+    "Looks like using grid search can't really improve this F1 score. This model has the same F1 as the baseline SVM.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
