--- a/preprocessing/data_cleaning.ipynb
+++ b/preprocessing/data_cleaning.ipynb
@@ -28,7 +28,9 @@
     "\n",
     "This notebook contains **basic data cleaning steps that are not included in the NLP preprocessing procedure**.\n",
     "\n",
-    "The purpose of this is to fix up the provided `twitter_data.csv` and adjust it for our classification use. **The cleaned dataframe will be pickled for future use across all notebooks.**"
+    "Here, fix up the provided `twitter_data.csv` and adjust it for our classification use. **The cleaned dataframe will be pickled for future use across all notebooks.**\n",
+    "\n",
+    "**Please note:** Because of the subject matter of this project, this notebook contains uncensored offensive language from the dataset."
    ],
    "cell_type": "markdown",
    "metadata": {}
