editing business qus and graphs

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -75,16 +75,34 @@
    "source": [
     "# Data Understanding\n",
     "\n",
-    "1. What is the overall polarity of the tweets?\n",
-    "2. What are the most popular hashtags of each tweet type?\n",
-    "3. Which phrases have the most importance in modeling?"
+    "1. What are the linguistic differences between hate speech and offensive language?\n",
+    "2. What is the overall polarity of the tweets?\n",
+    "3. What are the most popular hashtags of each tweet type?"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "![img1](./visualizations/avg_polarity_by_tweet_type.png)\n"
+    "![img1](./visualizations/label_word_count.png)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "Linguistically, it's important to note that the difference between hate speech and offensive lanugage often comes down to how it targets marginalized communities, often in threatening ways. \n",
+    "\n",
+    "For instance, we can notice from this figure that Hate Speech typically contains the N-word with the hard 'R'. The use of this slur indicates far more malicious intent, which goes beyond possibly using the word as slang.\n",
+    "\n",
+    "Examples like that demonstratee the neuances of English slang and the fine line beteween Hate Speech and offensive language."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "![img3](./visualizations/avg_polarity_by_tweet_type.png)\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -106,13 +124,18 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# analysis"
-   ]
+    "The Compound score is a metric that calculates the sum of all the [lexicon ratings](https://github.com/cjhutto/vaderSentiment/blob/master/vaderSentiment/vader_lexicon.txt) which have been normalized between -1 and +1. With -1 being extreme negative and +1 being extreme positive.\n",
+    "\n",
+    "- Hate Speech tweets on average have a compound score of -0.363\n",
+    "- Non Hate Speech tweets on average have a compound score of -0.263\n",
+    "\n",
+    "According to this metric, both classes of tweets have negative sentiments because their normalized compound scores are less than -0.05.\n",
+    "\n",
+    "This score seems to be the more reliable metric because it encompasses the overall sentiment of this corpus. Both classes contain negative, offensive language. But tweets that have been classified as Hate Speech are especially negative."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
