final graph edit

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "source": [
-    "![img1](./visualizations/label_word_count.png)\n"
+    "![img1](./visualizations/label_word_count.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
