filling out analysis & fixing typos

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -91,11 +91,11 @@
   },
   {
    "source": [
-    "Linguistically, it's important to note that the difference between hate speech and offensive lanugage often comes down to how it targets marginalized communities, often in threatening ways. \n",
-    "\n",
+    "Linguistically, it's important to note that the difference between hate speech and offensive language often comes down to how it **targets marginalized communities, often in threatening ways.**\n",
+    " \n",
     "For instance, we can notice from this figure that Hate Speech typically contains the N-word with the hard 'R'. The use of this slur indicates far more malicious intent, which goes beyond possibly using the word as slang.\n",
-    "\n",
-    "Examples like that demonstratee the neuances of English slang and the fine line beteween Hate Speech and offensive language."
+    " \n",
+    "Examples like that demonstrate the nuances of English slang and the fine line between Hate Speech and offensive language.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -125,14 +125,14 @@
   },
   {
    "source": [
-    "The Compound score is a metric that calculates the sum of all the [lexicon ratings](https://github.com/cjhutto/vaderSentiment/blob/master/vaderSentiment/vader_lexicon.txt) which have been normalized between -1 and +1. With -1 being extreme negative and +1 being extreme positive.\n",
+    "The Compound score is a metric that calculates the sum of all the [lexicon ratings](https://github.com/cjhutto/vaderSentiment/blob/master/vaderSentiment/vader_lexicon.txt) which have been normalized between -1 and +1. With -1 being extreme negative and +1 being extreme positive. **This score encompasses the overall sentiment of this corpus.**\n",
     "\n",
     "- Hate Speech tweets on average have a compound score of -0.363\n",
     "- Non Hate Speech tweets on average have a compound score of -0.263\n",
     "\n",
     "According to this metric, both classes of tweets have negative sentiments because their normalized compound scores are less than -0.05.\n",
     "\n",
-    "This score seems to be the more reliable metric because it encompasses the overall sentiment of this corpus. Both classes contain negative, offensive language. But tweets that have been classified as Hate Speech are especially negative."
+    "From this graph, we can see that tweets classified as Hate Speech are especially negative. Therefore, although both classes contain offensive language, Hate Speech has much more on average."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -146,32 +146,14 @@
   },
   {
    "source": [
-    "Most of these hashtags don't provide much meaning, but some of them do. For instance, #teabagger and #tcot are hashtags used among Alt-Right communities. #teabagger refers to those who idenitify with the Tea Party, which is primariily (but not exclusively) associated with the Repubclican Party. And #tcot stands for \"Top Conservatives On Twitter.\"\n",
+    "Only a few of these hashtags provide meaning. For instance, #teabagger and #tcot are hashtags used among Alt-Right communities. #teabagger refers to those who identify with the Tea Party, which is primarily (but not exclusively) associated with the Repubclican Party. And #tcot stands for \"Top Conservatives On Twitter.\"\n",
     "\n",
-    "It could be expected that those hashtags contain hate speech or offensive language. Others are simply pop culture references, such as #Scandal the TV show or #vote5sos refering to the boy band.\n",
+    "It could be expected that those hashtags contain hate speech or offensive language. Others are simply pop culture references, such as #Scandal the TV show or #vote5sos referring to the boy band.\n",
     "\n",
-    "Overall, we can reccomend that Twitter closely monitors these hashtags for potential posts containing hate speech or even regular offensive language."
+    "We can **recommend that Twitter closely monitors those top hashtags for potential posts containing hate speech** or even regular offensive language."
    ],
    "cell_type": "markdown",
    "metadata": {}
-  },
-  {
-   "source": [
-    "# figure 3 Bigrams chart?\n"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# analysis"
-   ]
   },
   {
    "source": [
@@ -433,13 +415,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "source": [
-    "# Recommendations"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "code",
